# libxmem

./: .gitignore  LICENSE  Makefile.am  README.md  account.c  account.h  check.c  configure.ac  libxmem.h  libxmem.m4  store.c  store.h  xmem.c
include/: Makefile.am  account.h  libxmem.h
m4/: libxmem.m4
src/: Makefile.am  account.c  check.c  store.c  store.h
test/: .gitignore  Makefile.am  double_free.c  forgotten_memory.c  forgotten_memory.expect  speed.c  test.sh
